# idel_game

./: Cargo.toml  Todo.md  plan.md
assets/: test.cube
assets/shaders/: vertex.wgsl  vox.wgsl
src/: debug.rs  main.rs  map.rs  physics.rs  player.rs
src/map/: ambiance.rs  blocks.rs  chunk.rs  debug.rs  map_gen.rs  mod.rs
src/map/chunk/: chunk_id.rs
src/map/map_gen/: biomes.rs  map_parameters.rs
src/map/map_gen/biomes/: badlands.rs  debug.rs  desert.rs  lake.rs  mountain.rs  ocean.rs  plains.rs
src/player/: debug.rs  fly_camera.rs  mod.rs  player_controller.rs  reycast.rs
src/rendering/: mod.rs  voxel_shader.rs
src/ui/: mod.rs  widgets.rs
src/ui/menu/: builder.rs  debug.rs  esc_menu.rs  main.rs  mod.rs
src/ui/menu/builder/: button.rs  check_box.rs  label.rs  mod.rs  slider.rs
src/ui/menu/debug/: biome_seeker.rs
src/ui/menu/settings_menu/: camera_settings.rs  mod.rs
src/ui/widgets/: mod.rs  reflect.rs
src/ui/widgets/reflect/: curve.rs
