[package]
name = "vox_idel_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", features = ["experimental_bevy_feathers", "serialize", "file_watcher"]}
const-siphasher = "1.0.2"
ron = "*"
serde = { version = "1.0", features = ["derive"] }
rand = "*"

[profile.dev.package."*"]
optlev = 3